docs(swagger): padronizar agrupamento das APIs
